<resources>
    <string name="app_name">SportTracker</string>

    <string name="channel_group_name">tracker channel group</string>
    <string name="channel_name">tracker service channel</string>
    <string name="channel_description">tracker service notification</string>
    <string name="service_notification_title">Tracking Service</string>

    <string name="location_permission_rationale">Location permission is needed to track user during training</string>
    <string name="location_permission_denied">Denying location permission makes training functionality unavailable</string>

    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="pause">pause</string>
    <string name="resume">resume</string>
    <string name="training_distance_description">distance</string>
    <string name="training_velocity_description">current velocity</string>
    <string name="training_avg_velocity_description">average velocity</string>
    <string name="training_altitude_description">current description</string>

    <string name="map_tab">map</string>
    <string name="console_tab">console</string>
    <string name="stats_tab">stats</string>
    <string name="chart_tab">chart</string>

    <string name="summary_calendar_description">training date</string>
    <string name="summary_time_description">time</string>
    <string name="summary_distance_description">distance</string>
    <string name="summary_avg_velocity_description">average velocity</string>
    <string name="summary_max_velocity_description">max velocity</string>
    <string name="summary_avg_altitude_description">average altitude</string>
    <string name="summary_max_altitude_description">max altitude</string>

    <string name="summary_menu_delete_title">delete training</string>
    <string name="summary_menu_save_title">save training</string>
    <string name="summary_menu_title">Training Summary</string>

    <string name="main_nav_personal_title">Personal records</string>
    <string name="main_nav_trainings_title">Trainings</string>
    <string name="main_nav_settings_title">Settings</string>

    <string name="personal_hall_of_fame">Hall of fame</string>
    <string name="personal_monthly_summary_header">This month summary</string>
    <string name="personal_total_summary_header">Total summary</string>

    <string name="details_menu_delete_title">delete training</string>
    <string name="details_menu_title">Training Details</string>

    <string name="training_delete_dialog_message">Do you want to delete this training?</string>
    <string name="training_delete_dialog_positive">OK</string>
    <string name="training_delete_dialog_negative">Cancel</string>

</resources>
