<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wkurek.sporttracker.SummaryStatsFragment"
    android:background="#ebeaea">

    <android.support.v7.widget.CardView
        android:id="@+id/summary_calendar_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/colorTextLight"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/summary_calendar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:drawableStart="@drawable/ic_calendar"
            android:drawablePadding="16dp"
            android:layout_gravity="center"
            android:gravity="center"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/summary_main_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/colorTextLight"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/summary_calendar_card">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <ImageView
                    android:id="@+id/summary_time_image"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/summary_time_description"
                    android:src="@drawable/ic_timer"
                    android:background="@drawable/training_icon" />

                <TextView
                    android:id="@+id/summary_time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="18dp"
                    android:layout_toEndOf="@+id/summary_time_image"
                    android:textSize="36sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <ImageView
                    android:id="@+id/summary_distance_image"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/summary_distance_description"
                    android:src="@drawable/ic_distance"
                    android:background="@drawable/training_icon"
                    android:tint="#56ab19" />

                <TextView
                    android:id="@+id/summary_distance_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="18dp"
                    android:layout_toEndOf="@+id/summary_distance_image"
                    android:textSize="36sp" />
            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/summary_velocity_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/colorTextLight"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/summary_main_card">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <ImageView
                    android:id="@+id/summary_avg_velocity_image"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:contentDescription="@string/summary_avg_velocity_description"
                    android:src="@drawable/ic_velocity"
                    android:background="@drawable/training_icon"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/summary_avg_velocity_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="18dp"
                    android:layout_toEndOf="@+id/summary_avg_velocity_image"
                    android:textColor="@color/colorTextDark"
                    android:textSize="24sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <ImageView
                    android:id="@+id/summary_max_velocity_image"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:contentDescription="@string/summary_max_velocity_description"
                    android:src="@drawable/ic_velocity"
                    android:background="@drawable/training_icon"
                    android:tint="#ff7a00" />

                <TextView
                    android:id="@+id/summary_max_velocity_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="18dp"
                    android:layout_toEndOf="@+id/summary_max_velocity_image"
                    android:textColor="@color/colorTextDark"
                    android:textSize="24sp" />
            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/summary_altitude_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        app:cardBackgroundColor="@color/colorTextLight"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/summary_velocity_card">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <ImageView
                    android:id="@+id/summary_avg_altitude_image"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:contentDescription="@string/summary_avg_altitude_description"
                    android:src="@drawable/ic_altitude"
                    android:background="@drawable/training_icon"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/summary_avg_altitude_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="18dp"
                    android:layout_toEndOf="@+id/summary_avg_altitude_image"
                    android:textColor="@color/colorTextDark"
                    android:textSize="24sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <ImageView
                    android:id="@+id/summary_max_altitude_image"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:contentDescription="@string/summary_max_altitude_description"
                    android:src="@drawable/ic_altitude"
                    android:background="@drawable/training_icon"
                    android:tint="#ff7a00" />

                <TextView
                    android:id="@+id/summary_max_altitude_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="18dp"
                    android:layout_toEndOf="@+id/summary_max_altitude_image"
                    android:textColor="@color/colorTextDark"
                    android:textSize="24sp" />
            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
